outputs/tsp_constructive-constructive/2025-12-21_21-29-06/evaluations/problem_eval-3234548073485169597_stdout.txt
Traceback (most recent call last):
  File "C:\Users\pc\Downloads\EvolutionaryComputation\MCTS-AHD-master/problems/tsp_constructive/eval.py", line 11, in <module>
    from gpt import select_next_node_v2 as select_next_node
  File "C:\Users\pc\Downloads\EvolutionaryComputation\MCTS-AHD-master\problems\tsp_constructive\gpt.py", line 1
    importance of certain heuristic components (e.g., the secondary look-ahead's weight) based on the remaining number of unvisited nodes, allowing for a flexible balance between exploration and exploitation as the tour progresses.
                                                                              ^
SyntaxError: unterminated string literal (detected at line 1)

During handling of the above exception, another exception occurred:

Traceback (most recent call last):
  File "C:\Users\pc\Downloads\EvolutionaryComputation\MCTS-AHD-master/problems/tsp_constructive/eval.py", line 13, in <module>
    from gpt import select_next_node
  File "C:\Users\pc\Downloads\EvolutionaryComputation\MCTS-AHD-master\problems\tsp_constructive\gpt.py", line 1
    importance of certain heuristic components (e.g., the secondary look-ahead's weight) based on the remaining number of unvisited nodes, allowing for a flexible balance between exploration and exploitation as the tour progresses.
                                                                              ^
SyntaxError: unterminated string literal (detected at line 1)
